--- a/english.html
+++ b/english.html
@@ -565,6 +565,8 @@ Error message and password prompt
 
 <li>Pedro Almodóvar</li>
 
+<li>Pele Ozen</li>
+
 <li>Perfectionism or OCD</li>
 
 <li>Philip Seymour Hoffman</li>
@@ -8624,7 +8626,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="Jazz [[Pele Ozen]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8644,7 +8646,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220184111201" title="$:/temp/search">
+<div created="20161023184814872" modified="20200223145101142" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9657,7 +9659,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200222180355473" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200223145556015" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -10231,10 +10233,13 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 
 </pre>
 </div>
-<div created="20200217150536703" modified="20200217150654814" tags="[[Outer sisters]] [[Here in the Ghetto]] Music [[Coen sister]] [[A friend]] [[How many songs can you even invent at all]]" title="Jazz">
+<div created="20200217150536703" modified="20200223145427644" tags="[[Outer sisters]] [[Here in the Ghetto]] Music [[Coen sister]] [[A friend]] [[How many songs can you even invent at all]]" title="Jazz">
 <pre>[img[pictures/jazz.jpg]]
 
 
+!!![[Tomer]]:
+
+Jazz is Yasmin Leselrot and she's a wonder. She fights for peace, equality and freedom and she's the purest love form there is. This is her singing with Brill, a member off [[Pele Ozen]].
 
  &lt;&lt;heblink [[Jazz]]&gt;&gt;</pre>
 </div>
@@ -10960,6 +10965,19 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 
  &lt;&lt;heblink [[פדרו אלמודובר]]&gt;&gt;
 
+
+</pre>
+</div>
+<div created="20200223145445131" modified="20200223145651152" tags="Music [[Here in the Ghetto]] [[Outer sisters]]" title="Pele Ozen">
+<pre>
+[img[pictures/pele-ozen.jpg]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[פלא אוזן]]&gt;&gt;
 
 </pre>
 </div>
