--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כאן בגטו]] Jazz [[פלא אוזן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200222180203277" title="$:/temp/search">
+<div created="20161023184814872" modified="20200223144013380" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9613,7 +9613,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200222180436826" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200223145721528" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -17468,7 +17468,7 @@ __אופן ההכנה____
 &lt;&lt;englink [[Peacock]]&gt;&gt;
 </pre>
 </div>
-<div created="20180408155155270" modified="20200212144511252" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="פלא אוזן">
+<div created="20180408155155270" modified="20200223145749343" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="פלא אוזן">
 <pre>[img[pictures/pele-ozen.jpg]]
 
 !!![[הצוות]]:
@@ -17480,7 +17480,8 @@ __אופן ההכנה____
 [[כי את האור להפיץ זה לא פשע|https://www.youtube.com/watch?v=Z2mJLm8aUiI]]
 
 
-</pre>
+
+&lt;&lt;englink [[Pele Ozen]]&gt;&gt;</pre>
 </div>
 <div created="20170405154213420" modified="20180605133824698" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="פלפלים קלויים">
 <pre>[img[pictures/pilpelim.jpg]]
