--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ Error message and password prompt
 
 <li>logo-bg</li>
 
-<li>max 20</li>
+<li>Max 20</li>
 
 <li>RTLStylesheet</li>
 
@@ -9175,7 +9175,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200220174001870" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200220183115758" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200223154905606" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כאן בגטו]] [[max 20]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כאן בגטו]] [[אברהם הוסטל]] TLV [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9465,7 +9465,7 @@ well,
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20190217153917796" modified="20200223150310757" tags="[[כאן בגטו]]" title="max 20">
+<div created="20190217153917796" modified="20200223154851894" tags="[[כאן בגטו]]" title="Max 20">
 <pre>[img[pictures/max20.jpg]]
 
 !!![[תומר]]:
@@ -9474,7 +9474,7 @@ well,
 
 
 
-&lt;&lt;englink [[max 20]]&gt;&gt;
+&lt;&lt;englink [[Max 20]]&gt;&gt;
 </pre>
 </div>
 <div created="20161023181104390" modified="20161113204648316" tags="$:/tags/Stylesheet LTR" title="RTLStylesheet" type="text/css">
@@ -9598,12 +9598,16 @@ well,
 
 </pre>
 </div>
-<div created="20180912153229188" modified="20200217150839269" tags="[[כאן בגטו]] מוזיקה [[בדרך לאן שהוא]]" title="אברהם הוסטל">
+<div created="20180912153229188" modified="20200223154930249" tags="[[כאן בגטו]] מוזיקה [[בדרך לאן שהוא]]" title="אברהם הוסטל">
 <pre>[img[pictures/abraham-hostel.jpg]]
 
 !!![[תומר]]:
 
-שבועיים לפני, אשתי הנחמדת קנתה לה ולי כרטיסים להופעה של [[קותימן|https://kutiman.bandcamp.com/]] שהתקיימה בסוף יולי [[באברהם הוסטל|https://abrahamhostels.com/?gclid=EAIaIQobChMI_djYvui13QIVmKiaCh0GAAOpEAAYASAAEgISR_D_BwE]], שזה מקום שאני תמיד אוהב ללכת אליו. בשעת האמת היא הייתה עייפה מידי, ומיד הזמנתי את שכנתי האהובה, (חוטא רגע בניים דרופינג), [[יסמין|Jazz]], שהופיעה שם לפני כמה חודשים עם [[שלוש|https://www.youtube.com/watch?v=ZamQEe7_hdQ]], לבוא איתי, והיא הייתה פנויה!! לקחנו מונית כי חם, והיה כיף חיים.</pre>
+שבועיים לפני, אשתי הנחמדת קנתה לה ולי כרטיסים להופעה של [[קותימן|https://kutiman.bandcamp.com/]] שהתקיימה בסוף יולי [[באברהם הוסטל|https://abrahamhostels.com/?gclid=EAIaIQobChMI_djYvui13QIVmKiaCh0GAAOpEAAYASAAEgISR_D_BwE]], שזה מקום שאני תמיד אוהב ללכת אליו. בשעת האמת היא הייתה עייפה מידי, ומיד הזמנתי את שכנתי האהובה, (חוטא רגע בניים דרופינג), [[יסמין|Jazz]], שהופיעה שם לפני כמה חודשים עם [[שלוש|https://www.youtube.com/watch?v=ZamQEe7_hdQ]], לבוא איתי, והיא הייתה פנויה!! לקחנו מונית כי חם, והיה כיף חיים.
+
+
+
+&lt;&lt;englink [[Abraham Hostel]]&gt;&gt;</pre>
 </div>
 <div created="20171207164711924" modified="20200217175845701" tags="[[הנחלה בה גדלתי]]" title="אדית">
 <pre>[img[pictures/edith-cohen.jpg]]
@@ -9616,7 +9620,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200223150241243" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200223153107335" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -13599,7 +13603,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180712143703187" modified="20200217121728903" tags="[[מטא בדיון]] [[אחיות חוץ]] [[הכפר הגלובלי]]" title="כאן בגטו">
+<div created="20180712143703187" modified="20200223154901826" tags="[[מטא בדיון]] [[אחיות חוץ]] [[הכפר הגלובלי]]" title="כאן בגטו">
 <pre>[img[pictures/here-in-the-ghetto.jpg]]
 
 !!![[תומר]]:
