--- a/english.html
+++ b/english.html
@@ -295,6 +295,8 @@ Error message and password prompt
 
 <li>Angelic</li>
 
+<li>Animal Protest</li>
+
 <li>Anna</li>
 
 <li>Another frame from Synecdoche New York</li>
@@ -9254,7 +9256,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[New order]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Animal Protest]] [[Another frame from Synecdoche New York]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9747,6 +9749,14 @@ To place a (gloved) hand over her face, and twist.
 
  &lt;&lt;heblink [[אנג'ליק]]&gt;&gt;
 </pre>
+</div>
+<div created="20211227160103489" modified="20211227161853991" tags="[[True stories]] [[Monkeys with car keys]] [[Outer sisters]] Houses" title="Animal Protest">
+<pre>
+[img[pictures/animalprotest.jpg]]
+
+
+
+ &lt;&lt;heblink [[מחאת החיות]]&gt;&gt;</pre>
 </div>
 <div created="20200218185443099" modified="20200220075112122" tags="[[Coen sister]]" title="Anna">
 <pre>[img[pictures/JcnhaFI7DwaT9664.jpg]]
@@ -11589,7 +11599,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20211226171746874" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20211227161830048" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
