--- a/index.html
+++ b/index.html
@@ -1057,6 +1057,8 @@ Error message and password prompt
 
 <li>מזנון</li>
 
+<li>מחאת החיות</li>
+
 <li>מחאת הנשים</li>
 
 <li>מחלקים סלולרים</li>
@@ -9342,7 +9344,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עוד פריים מסינקדוכה ניו יורק]] [[סדר חדש]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מחאת החיות]] [[עוד פריים מסינקדוכה ניו יורק]] [[סדר חדש]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10828,7 +10830,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20211226175102902" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20211227161943921" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16667,6 +16669,14 @@ We rise to play a greater part.
 
 
 &lt;&lt;englink [[Miznon]]&gt;&gt;</pre>
+</div>
+<div created="20211227155755318" modified="20211227162016215" tags="[[קופים ממונעים]] [[סיפורים אמיתיים]] [[אחיות חוץ]] בתים" title="מחאת החיות">
+<pre>
+[img[pictures/animalprotest.jpg]]
+
+
+
+&lt;&lt;englink [[Animal Protest]]&gt;&gt;</pre>
 </div>
 <div created="20181209170135890" modified="20200320095119396" tags="[[כאן בגטו]] אימהות סגירים" title="מחאת הנשים">
 <pre>[img[pictures/mechaat-hanashim.jpg]]
