--- a/index.html
+++ b/index.html
@@ -9344,7 +9344,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מחאת החיות]] [[עוד פריים מסינקדוכה ניו יורק]] [[סדר חדש]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -16670,9 +16670,16 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Miznon]]&gt;&gt;</pre>
 </div>
-<div created="20211227155755318" modified="20211227162016215" tags="[[קופים ממונעים]] [[סיפורים אמיתיים]] [[אחיות חוץ]] בתים" title="מחאת החיות">
+<div created="20211227155755318" modified="20211227163130807" tags="[[קופים ממונעים]] [[סיפורים אמיתיים]] [[אחיות חוץ]] בתים" title="מחאת החיות">
 <pre>
 [img[pictures/animalprotest.jpg]]
+
+
+!!![[גורה]]:
+
+התמה של ארוחת הכריסמס 2021 שלנו הייתה:
+
+חמור, זו לא קללה. גם לא כלב, וגם לא שימפנזה או קוף או חזיר או שום חיה כולל לא המילה חיה - זו לא קללה.
 
 
 
