--- a/index.html
+++ b/index.html
@@ -16202,13 +16202,13 @@ We rise to play a greater part.
 &lt;&lt;englink [[what does a thing assemble]]&gt;&gt;
 </pre>
 </div>
-<div created="20220102115252566" modified="20220102120722433" tags="[[כאן בגטו]] בתים [[בדרך לאן שהוא]]" title="למטה">
+<div created="20220102115252566" modified="20220102123206097" tags="[[כאן בגטו]] בתים [[בדרך לאן שהוא]]" title="למטה">
 <pre>
 [img[pictures/downthere.jpg]]
 
 !!![[תומר]]:
 
-[[שם יש ים|https://www.youtube.com/watch?v=kU6AGgWJo2M]]
+[[שם יש ים|https://www.youtube.com/watch?v=kU6AGgWJo2M]], ונורא כדאי להתלבש יפה כי יש מצלמה לכל זוית.
 
 &lt;&lt;englink [[Down there]]&gt;&gt;
 </pre>
