--- a/index.html
+++ b/index.html
@@ -9348,7 +9348,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="למטה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עוגת שוקולד]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9368,8 +9368,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20211228200311680" title="$:/temp/search">
-<pre></pre>
+<div created="20161023184814872" modified="20220127190338850" title="$:/temp/search">
+<pre>עוגת שוקו</pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -16203,8 +16203,7 @@ We rise to play a greater part.
 </pre>
 </div>
 <div created="20220102115252566" modified="20220102130138900" tags="[[כאן בגטו]] בתים [[בדרך לאן שהוא]] חלונות" title="למטה">
-<pre>
-[img[pictures/downthere.jpg]]
+<pre>[img[pictures/downthere.jpg]]
 
 !!![[תומר]]:
 
@@ -18528,7 +18527,7 @@ __אופן ההכנה:__
 
 &lt;&lt;englink [[Poppy seed chocolate cake]]&gt;&gt;</pre>
 </div>
-<div created="20211212200845263" modified="20211212204412371" tags="מתכונים אפייה [[חיות אוכל]] ארוחות" title="עוגת שוקולד">
+<div created="20211212200845263" modified="20220127190417073" tags="מתכונים אפייה [[חיות אוכל]] ארוחות" title="עוגת שוקולד">
 <pre>[img[pictures/chocolatecake.jpg]]
 
 
@@ -18536,7 +18535,7 @@ __אופן ההכנה:__
  
 
 
-החומרים :
+החומרים לעוגה :
 
 *מאתיים חמישים גרם חמאה או מרגרינה
 *מאתיים גרם שוקולד מריר
@@ -18548,7 +18547,7 @@ __אופן ההכנה:__
 *כוס ורבע קמח מנופה
 *כפית אבקת אפייה
 
-
+החומרים לקרם:
 
 אופן ההכנה:
 
