--- a/index.html
+++ b/index.html
@@ -1129,6 +1129,8 @@ Error message and password prompt
 
 <li>מרינה זוטו</li>
 
+<li>מרכז בעלי מלאכה 6</li>
+
 <li>מרק</li>
 
 <li>מרק טחון</li>
@@ -9339,7 +9341,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20210430202203122" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20211226172541060" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20220411123545250" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9348,7 +9350,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עוגת שוקולד]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מרכז בעלי מלאכה 6]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9368,7 +9370,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20220128075439462" title="$:/temp/search">
+<div created="20161023184814872" modified="20220216141734735" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10847,7 +10849,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20220102115519481" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20220411122011212" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -17197,6 +17199,19 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Marina Zoto]]&gt;&gt;</pre>
 </div>
+<div created="20220411121335326" modified="20220411123607637" tags="[[כאן בגטו]] [[בדרך לאן שהוא]]" title="מרכז בעלי מלאכה 6">
+<pre>
+
+[img[pictures/MerkazBa'aleiMelaha.jpg]]
+
+!!![[אימא של ג'אז]]:
+
+יגעת ומצאת תאמין
+
+
+
+&lt;&lt;englink [[Merkaz Ba'alei Melaha 6]]&gt;&gt;</pre>
+</div>
 <div created="20170331201741562" modified="20200219173306289" tags="[[אחות כהן]]" title="מרק">
 <pre>[img[pictures/mark1.jpg]]
 
@@ -19885,7 +19900,7 @@ Fapina''
 &lt;&lt;englink [[Queng]]&gt;&gt;
 </pre>
 </div>
-<div created="20190422120310153" modified="20200307180213670" tags="[[מתכונים טבעוניים]] [[חיות אוכל]] מתכונים" title="קובה טבעוני">
+<div created="20190422120310153" modified="20220219163531087" tags="[[מתכונים טבעוניים]] [[חיות אוכל]] מתכונים" title="קובה טבעוני">
 <pre>[img[pictures/veg-cube.jpg]]
 
 !!![[הצוות]]:
