--- a/english.html
+++ b/english.html
@@ -937,6 +937,8 @@ Error message and password prompt
 
 <li>Our grandma</li>
 
+<li>Our shop</li>
+
 <li>Out of the retreat's window</li>
 
 <li>Outer sisters</li>
@@ -9280,7 +9282,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Rest [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Our shop]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11664,7 +11666,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20220921062534221" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20220929061339061" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -14249,6 +14251,15 @@ This will always be a mystery, even though that are some options for solutions, 
  &lt;&lt;heblink [[סבתא שלנו]]&gt;&gt;
 </pre>
 </div>
+<div created="20220929061254873" modified="20220929061401168" tags="[[Here in the Ghetto]]" title="Our shop">
+<pre>
+
+[img[pictures/ourshop.jpg]]
+
+
+
+ &lt;&lt;heblink [[החנות שלנו]]&gt;&gt;</pre>
+</div>
 <div created="20200503185958350" modified="20200910132416940" tags="Windows [[Here in the Ghetto]] [[Corona beings]] Houses Trees" title="Out of the retreat's window">
 <pre>[img[pictures/retreatswindow.jpg]]
 
@@ -14861,8 +14872,7 @@ We all inherited from [[Gura]] the tendency to pick up thrown away furniture or 
  &lt;&lt;heblink [[משפצים ובונים רהיטים]]&gt;&gt;</pre>
 </div>
 <div created="20220921062446014" modified="20220921062558420" tags="Kitchens Houses" title="Rest">
-<pre>
-[img[pictures/rest.jpg]]
+<pre>[img[pictures/rest.jpg]]
 
 
 
