--- a/index.html
+++ b/index.html
@@ -641,6 +641,8 @@ Error message and password prompt
 
 <li>החיים נועדו למי שלא יכול להתמודד עם סמים</li>
 
+<li>החנות שלנו</li>
+
 <li>היא ישבה בסלון ועישנה סיגריה</li>
 
 <li>היום יום הולדת</li>
@@ -9368,7 +9370,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[למשל במאפייה]] מנוחה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[החנות שלנו]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9388,7 +9390,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20220919190109431" title="$:/temp/search">
+<div created="20161023184814872" modified="20220929060758813" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10867,7 +10869,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20220921062343192" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20220929061436210" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -13046,6 +13048,15 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 </pre>
+</div>
+<div created="20220929061138622" modified="20220929061514654" tags="[[כאן בגטו]] [[האחיות בלות]]" title="החנות שלנו">
+<pre>
+[img[pictures/ourshop.jpg]]
+
+
+
+
+&lt;&lt;englink [[Our shop]]&gt;&gt;</pre>
 </div>
 <div created="20220903102152357" modified="20220903104420244" tags="אימהות בתים [[האחיות בלות]] [[סיפורים אמיתיים]]" title="היא ישבה בסלון ועישנה סיגריה">
 <pre>[img[pictures/shesatinthelivingroom.jpg]]
